fix ECM-2171: IE6: Error in display File Explorer portlet when the scrollbar appears

--- a/portlet/ecm/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/DefaultStylesheet.css
+++ b/portlet/ecm/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/DefaultStylesheet.css
@@ -335,6 +335,13 @@
 }
 
 /*===========================DocumentFormController=====================*/
+.UIJCRExplorerPortlet .EditFormController .UIFormWithTitle {
+	border: 1px solid #b7b7b7;
+}
+
+.UIJCRExplorerPortlet .EditFormController .UIFormWithTitle .HorizontalLayout {
+	padding: 10px;
+}
 
 .UIJCRExplorerPortlet .UIJCRExplorer .UIDocumentFormController {
 	padding: 10px;
